--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,90 @@
     --textp-color-: #757575;
     --bebrount-color-: #F5F4FA;
     --ttext-color-: #FFF;
-    --buisness-color-: #2F303A;
+    --buisness-color-: #2F303A
     --partybeb-color-:#F5F4FA;
     --border-color-: #EEE;
     --afro-color-: #AFB1B8;
 }
+
+html {
+    scroll-behavior: smooth;
+}
+
+.window {
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+
+/* menu */
+
+.menu {
+    width: 300px;
+    height: 500px;
+    background-color: var(--afro-color-);
+    position: fixed;
+    top: 0;
+    left: -250px;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    padding-right: 50px;
+}
+
+.menu:hover {
+    left: 0px;
+    .menu-title {
+        opacity: 0;
+    }
+}
+
+.menu-list {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+.menu-title {
+    font-size: 52px;
+    font-style: italic;
+    font-weight: 900;
+    position: absolute;
+    top: 40%;
+    left : 200px;
+    transform: rotate(270deg);
+    color: #E7E7E7;
+}
+
+.menu-link {
+    font-size: 20px;
+    font-style: italic;
+    font-weight: 900;
+    color: var(--border-color-);
+}
+
+.menu-link {
+    display: flex;
+    align-items: center;
+    padding: 5px 10px;
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+    color: var(--ttext-color-);
+}
+
+.menu-link::before {
+    content: "";
+    border: solid 1px var(--logo-color-);
+    width: 10px;
+    height: 10px;
+    background-color: orange;
+    display: inline-block;
+    margin-right: 5px;
+    transform: rotate(45deg);
+}  
+
+/* другой ccs */
 
 .body{
     font-family: "Roboto";
@@ -57,6 +136,10 @@ img {
     margin-right: 93px;
 }
 
+.header-item {
+    position: relative;
+}
+
 .header-web {
       color: var(--accent-color-);
 }
@@ -69,6 +152,28 @@ img {
     letter-spacing: 0.028px;
     display: flex;
     align-items: center;
+    transition-property: background-color;
+    transition-duration: 2500ms;
+    transition-timing-function: cubic-bezier(1,-0.01,0,1)
+}
+
+.header-thumb::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 5px;
+    background-color: var(--accent-color-);
+    position: absolute;
+    left: 0;
+    bottom: -34px;
+    border-radius: 10px;
+    opacity: 0;
+    
+}
+
+.header-thumb:hover::after {
+    opacity: 1;
+    /* visibility: visible; */
 }
 
 .header-thumb:hover {
@@ -78,19 +183,48 @@ img {
     }
 }
 
-  .header-items{
+.header-items{
     display: flex;
     align-items: center;
     gap: 50px;
     margin-left: auto;
 }
-  
-.header-avatar{
-    color:var(--text-color-);
+
+
+.header-avatar {
+    color: var(--text-color-);
     font-size: 14px;
     font-weight: 500;
     line-height: 1.14;
+    /* letter-spacing: 0.4px;    
+    margin-bottom: 52px; */
+    /* transition-property: background-color;
+    transition-duration: 2500ms;
+    transition-timing-function: cubic-bezier(1,-0.01,0,1); */
 }
+
+.header-avatar::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 5px;
+    background-color: var(--accent-color-);
+    position: absolute;
+    left: 0;
+    bottom: -34px;
+    border-radius: 10px;
+    opacity: 0;
+    /* visibility: hidden; */
+    /* transition-property: opacity;
+    transition-duration: 2500ms;
+    transition-timing-function: cubic-bezier(1,-0.01,0,1); */
+}
+
+.header-avatar:hover::after {
+    opacity: 1;
+    /* visibility: visible; */
+}
+
 .header-avatar:hover {
     color: var(--accent-color-);
 }
@@ -154,10 +288,56 @@ img {
     font-family: 'Raleway';
 }
 
+/* footer */
+
 .foot {
     background: #2F303A;
     padding-top: 60px; 
     padding-bottom: 60px;
+    position: relative;
+}
+
+.foot .container {
+    display: flex;
+    align-items: baseline;
+    gap: 70px;
+}
+
+.footer-tiitle {
+    color: #FFF;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 0.42px;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    
+}
+
+.footer-items {
+    display: flex;
+    gap: 10px;
+}
+
+.footer-link {
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.10);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-link:hover {
+    background-color: var(--accent-color-);
+
+}
+
+.footer-icon {
+    width: 20px;
+    height: 20px;
+    fill: var(--ttext-color-);
 }
 
 .foot-logo {
@@ -465,8 +645,8 @@ gap: 30px;
 /* client */
 
 .client {
-    padding-top: 188px;
-    padding-bottom: 154px;
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 .client-h2 {
@@ -481,16 +661,21 @@ gap: 30px;
 }
 
 .client-list {
-    margin-top: 66px;
+    margin-top: 50px;
     display: flex;
     gap: 30px;
     
 }
 
 .client-link {
-    border: 1px var(--afro-color-) solid;
     border-radius: 4px;
-    padding: 32px 32px;
+    width: 170px;
+    height: 92px;
+    border-radius: 4px;
+    border: 1px solid #AFB1B8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .client-icon {
