--- a/css/style.css
+++ b/css/style.css
@@ -16,18 +16,11 @@ html {
     scroll-behavior: smooth;
 }
 
-.window {
-    position: fixed;
-    top: 0;
-    left: 0;
-}
-
-
 /* menu */
 
 .menu {
     width: 300px;
-    height: 500px;
+    height: 100%;
     background-color: var(--afro-color-);
     position: fixed;
     top: 0;
@@ -88,6 +81,25 @@ html {
     margin-right: 5px;
     transform: rotate(45deg);
 }  
+
+/* modal */
+
+.window {
+    background: rgba(0, 0, 0, 0.20);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
+}
+
+.modal {
+    width: 528px;
+    height: 581px;
+    border-radius: 4px;
+    background: var(--ttext-color-);
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
+}
 
 /* другой ccs */
 
