--- a/css/style.css
+++ b/css/style.css
@@ -85,20 +85,140 @@ html {
 /* modal */
 
 .window {
+    position: fixed;
+    top: 0;
+    left: 0;
     background: rgba(0, 0, 0, 0.20);
     width: 100%;
     height: 100%;
-    top: 0;
-    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
+}
+
+.is-hidden {
+    opacity: 0;
+    pointer-events: none;
 }
 
 .modal {
     width: 528px;
     height: 581px;
+    position: relative;
     border-radius: 4px;
+    padding: 40px;
     background: var(--ttext-color-);
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
+}
+
+.modal-close {
+    width: 30px;
+    height: 30px;
+    border: 1px solid rgba(0, 0, 0, 0.10);
+    border-radius: 50%;
+    background-color: transparent;
+    position: absolute;
+    top: 8px;
+    right: 8px;
+}
+
+.modal-title {
+    color: var(--text-color-);
+    text-align: center;
+    font-family: "Roboto";
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 0.6px;
+}
+
+.modal-label {
+    color: var(--textp-color-);
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 0.12px;
+}
+
+.modal-input {
+    width: 100%;
+    height: 40px;
+    border-radius: 4px;
+    display: block;
+    margin-top: 4px;
+    margin-bottom: 10px; 
+    padding-left: 42px;
+    padding-right: 5px;
+    border: 1px solid rgba(33, 33, 33, 0.20);
+    transition-property: border;
+    transition-duration: 350ms;
+    transition-timing-function: cubic-bezier(1,0,0,1);
+}
+
+.modal-input:hover {
+    border: var(--accent-color-);
+}
+
+.modal-csvg {
+    width: 17px;
+    height: 17px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition-property: fill;
+    transition-duration: 350ms;
+    transition-timing-function: cubic-bezier(1,0,0,1);
+}
+
+.modal-csvg:hover {
+    fill: var(--accent-color-);
+}
+
+.modal-svg1 {
+    width: 18px;
+    height: 18px;
+    fill: var(--text-color-);
+    position: absolute;
+    top: 96px;
+    left: 52px;
+    transition-property: fill;
+    transition-duration: 350ms;
+    transition-timing-function: cubic-bezier(1,0,0,1);
+}
+
+.modal-svg1:hover {
+    fill: var(--accent-color-);
+}
+
+.modal-svg2 {
+    width: 18px;
+    height: 18px;
+    fill: var(--text-color-);
+    position: absolute;
+    top: 168.9px;
+    left: 52px;
+    transition-property: fill;
+    transition-duration: 350ms;
+    transition-timing-function: cubic-bezier(1,0,0,1);
+}
+
+.modal-svg2:hover {
+    fill: var(--accent-color-);
+}
+
+.modal-svg3 {
+    width: 18px;
+    height: 18px;
+    fill: var(--text-color-);
+    position: absolute;
+    top: 242px;
+    left: 52px;
+    transition-property: fill;
+    transition-duration: 350ms;
+    transition-timing-function: cubic-bezier(1,0,0,1);
+}
+
+.modal-svg3:hover {
+    fill: var(--accent-color-);
 }
 
 /* другой ccs */
