--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,9 @@ html {
     font-size: 12px;
     font-weight: 400;
     letter-spacing: 0.12px;
+    transition-property: fill;
+    transition-duration: 350ms;
+    transition-timing-function: cubic-bezier(1,0,0,1);
 }
 
 .modal-input {
@@ -173,6 +176,13 @@ html {
     fill: var(--accent-color-);
 }
 
+.modal-input:hover + svg {
+    fill: var(--accent-color-);
+}
+
+.modal-label:hover .modal-input {
+    border: 1px solid var(--accent-color-);
+}
 .modal-svg1 {
     width: 18px;
     height: 18px;
@@ -219,6 +229,74 @@ html {
 
 .modal-svg3:hover {
     fill: var(--accent-color-);
+}
+
+.modal-textarea {
+    padding: 12px 16px;
+    border-radius: 4px;
+    border: 1px solid rgba(33, 33, 33, 0.20);
+    width: 448px;
+    height: 120px;
+    resize: none;
+}
+
+.modal-divbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    gap: 5px;
+}
+
+.modal-checkbox {
+    width: 16px;
+    color: var(--text-color-);
+    height: 15px;
+    border: 2px solid var(--text-color-);
+}
+
+.modal-p {
+    margin-right: 3px;
+    color: var(--textp-color-);
+    font-family: "Roboto";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.71;
+    letter-spacing: 0.42px;
+}
+
+.modal-a {
+    color: var(--accent-color-);
+    font-family: "Roboto";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.42px;
+    text-decoration-line: underline;
+    text-decoration-style: solid;
+    text-decoration-skip-ink: none;
+    text-decoration-thickness: auto;
+    text-underline-offset: auto
+}
+
+.modal-button {
+    width: 200px;
+    height: 50px;
+    background-color: var(--accent-color-);
+    border: none;
+    border-radius: 4px;
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    color: var(--ttext-color-);
+}
+
+.modal-button:hover {
+    margin-top: 28px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 /* другой ccs */
