--- a/css/style.css
+++ b/css/style.css
@@ -306,7 +306,6 @@ html {
 }
 
 .modal-button:hover {
-    margin-top: 28px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
@@ -959,4 +958,66 @@ gap: 30px;
     .team-icon {
         fill: var(--ttext-color-);
     }
+}
+
+
+/* розсилка */
+.footer-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-tiiitle {
+    color: var(--ttext-color-);
+    font-family: "Roboto";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 0.42px;
+    text-transform: uppercase;
+}
+  
+.footer-input {
+    margin-top: 20px;
+    width: 358px;
+    height: 50px;
+    border-radius: 4px;
+    border: 1px solid rgba(255, 255, 255, 0.30);
+    background: rgba(33, 150, 243, 0.00);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    padding: 15px 16px;
+}
+  
+.footer-button {
+    width: 200px;
+    color: var(--ttext-color-);
+    text-align: center;
+    font-family: "Roboto";
+    font-size: 16px;
+    font-weight: 700;
+    border: none;
+    line-height: 1.87;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    letter-spacing: 0.96px;
+    height: 50px;
+    border-radius: 4px;
+    background: var(--accent-color-);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    margin-top: 20px;
+    margin-left: 12px;
+}
+
+.footer-button:hover {
+    background-color: #004680;
+}
+
+.footer-comit {
+    margin-left: 10px;
+    width: 24px;
+    height: 24px;
+    fill: var(--ttext-color-);
 }
