--- a/css/style.css
+++ b/css/style.css
@@ -850,12 +850,18 @@ gap: 30px;
 
 .buttons-item {
     flex-basis: calc((100% - 60px) / 3);
+    position: relative;
+    overflow: hidden;
 }
 
 .buttons-item:hover {
     outline: 1px solid #EEE;
-    background: #FFF;
+    background: var(--ttext-color-);
     box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.12), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 1px 4px 6px 0px rgba(0, 0, 0, 0.16);
+    .buttons-div1 {
+        transform: translateY(0%);
+        opacity: 1;
+    }
 }
 
 .buttons-button:hover {
@@ -905,6 +911,33 @@ gap: 30px;
 .buttons-div {
     outline: 1px solid var(--border-color-);
     padding: 20px 24px;
+}
+
+.buttons-div2 {
+    position: relative;
+    overflow: hidden;
+}
+
+.buttons-div1 {
+    background: rgba(33, 150, 243, 0.90);
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition-property: transform, opacity;
+    transition-duration: 350ms;
+    transition-timing-function: cubic-bezier(1,0,0,1);
+    padding: 49px 24px 77px 24px;
+    transform: translateY(100%);
+
+}
+
+.buttons-p1 {
+    color: #FFF;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.55;
+    letter-spacing: 0.54px;
 }
 
 /* client */
@@ -1009,10 +1042,7 @@ gap: 30px;
 /* розсилка */
 
 .footer-subscribe {
-    position: absolute;
-    right: 103px;
-    bottom: 104px;
-
+    margin-left: auto;
 }
 
 .footer-form {
@@ -1074,3 +1104,4 @@ gap: 30px;
     height: 24px;
     fill: var(--ttext-color-);
 }
+
