--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ html {
 
 .menu:hover {
     left: 0px;
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
     .menu-title {
         opacity: 0;
     }
@@ -76,6 +77,10 @@ html {
     font-family: Arial, sans-serif;
     font-weight: bold;
     color: var(--ttext-color-);
+}
+
+.menu-link:hover {
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-link::before {
@@ -166,6 +171,7 @@ html {
 
 .modal-input:hover {
     border: 1px solid var(--accent-color-);
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-csvg {
@@ -181,6 +187,7 @@ html {
 
 .modal-csvg:hover {
     fill: var(--accent-color-);
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:hover + svg{
@@ -209,6 +216,7 @@ html {
 
 .modal-svg1:hover {
     fill: var(--accent-color-);
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-svg2 {
@@ -225,6 +233,7 @@ html {
 
 .modal-svg2:hover {
     fill: var(--accent-color-);
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-svg3 {
@@ -241,6 +250,7 @@ html {
 
 .modal-svg3:hover {
     fill: var(--accent-color-);
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-textarea {
@@ -332,6 +342,17 @@ img {
     width: 100%;
 }
 
+.button {
+    color: black;
+    background-color: white;
+    box-shadow: none;
+}
+
+.button:hover {
+    color: white;
+    background-color: black;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
 
 .header {
     padding-top: 24px;
@@ -390,19 +411,34 @@ img {
     bottom: -34px;
     border-radius: 10px;
     opacity: 0;
-    
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-thumb:hover::after {
     opacity: 1;
-    /* visibility: visible; */
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-thumb:hover {
     color: var(--accent-color-);
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
     .header-svg {
         fill: var(--accent-color-);
     }
+}
+
+.header-thumb:hover::after {
+    opacity: 1;
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-svg {
+    fill: var(--textp-color-);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-thumb:hover .header-svg {
+    fill: var(--accent-color-);
 }
 
 .header-items{
@@ -417,12 +453,7 @@ img {
     color: var(--text-color-);
     font-size: 14px;
     font-weight: 500;
-    line-height: 1.14;
-    /* letter-spacing: 0.4px;    
-    margin-bottom: 52px; */
-    /* transition-property: background-color;
-    transition-duration: 2500ms;
-    transition-timing-function: cubic-bezier(1,-0.01,0,1); */
+    line-height: 1.14;  
 }
 
 .header-avatar::after {
@@ -435,20 +466,17 @@ img {
     left: 0;
     bottom: -34px;
     border-radius: 10px;
-    opacity: 0;
-    /* visibility: hidden; */
-    /* transition-property: opacity;
-    transition-duration: 2500ms;
-    transition-timing-function: cubic-bezier(1,-0.01,0,1); */
+    opacity: 0;    
 }
 
 .header-avatar:hover::after {
     opacity: 1;
-    /* visibility: visible; */
+
 }
 
 .header-avatar:hover {
     color: var(--accent-color-);
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .buisness {
@@ -489,6 +517,7 @@ img {
 
 .buisness-button:hover {
     background-color: #0f416a;
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .logo {
@@ -553,7 +582,7 @@ img {
 
 .footer-link:hover {
     background-color: var(--accent-color-);
-
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icon {
@@ -776,7 +805,7 @@ gap: 30px;
     margin-bottom: 50px;
 }
 .team-ul-p{
-    color: var(--text2-color);
+    color: var (--text2-color);
     font-size: 16px;
     font-weight: 400;
     line-height: 1.18;
@@ -784,7 +813,7 @@ gap: 30px;
     margin-top: 10px;
 }
 .team-h3{
-    color: var(--text-color);
+    color: var (--text-color);
     font-size: 16px;
     font-weight: 500;
     line-height: 1.18;
@@ -855,19 +884,28 @@ gap: 30px;
 }
 
 .buttons-item:hover {
-    outline: 1px solid #EEE;
+    outline: 1px solid var(--border-color-);
     background: var(--ttext-color-);
     box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.12), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 1px 4px 6px 0px rgba(0, 0, 0, 0.16);
-    .buttons-div1 {
-        transform: translateY(0%);
-        opacity: 1;
-    }
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.buttons-div1 {
+    transform: translateY(100%);
+    opacity: 0;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.buttons-item:hover .buttons-div1 {
+    transform: translateY(0%);
+    opacity: 1;
 }
 
 .buttons-button:hover {
     background-color: var(--accent-color-);
     color: var(--ttext-color-);
     box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.10), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .buttons-photo {
@@ -984,6 +1022,7 @@ gap: 30px;
 
 .client-link:hover {
     border: 1px var(--accent-color-) solid;
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
     .client-icon {
         fill: var(--accent-color-);
     }
@@ -1033,6 +1072,7 @@ gap: 30px;
 
 .team-link:hover {
     background-color: var(--accent-color-);
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
     .team-icon {
         fill: var(--ttext-color-);
     }
