--- a/css/style.css
+++ b/css/style.css
@@ -328,6 +328,7 @@ html {
 
 .modal-button:hover {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* другой ccs */
@@ -356,6 +357,7 @@ img {
     color: white;
     background-color: black;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header {
@@ -414,7 +416,7 @@ img {
     left: 0;
     bottom: -34px;
     border-radius: 10px;
-    opacity: 0;
+    opacity: 0; 
     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -430,11 +432,6 @@ img {
     .header-svg {
         fill: var(--accent-color-);
     }
-}
-
-.header-thumb:hover::after {
-    opacity: 1;
-    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-svg {
@@ -472,11 +469,12 @@ img {
     bottom: -34px;
     border-radius: 10px;
     opacity: 0;    
+    color: var(--accent-color-);
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-avatar:hover::after {
     opacity: 1;
-
 }
 
 .header-avatar:hover {
@@ -610,7 +608,7 @@ img {
 }
 
 .foot-ul-li-a {
-    color: var (--ttext-color-);
+    color:var (--ttext-color-);
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -893,7 +891,6 @@ gap: 30px;
     outline: 1px solid var(--border-color-);
     background: var(--ttext-color-);
     box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.12), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 1px 4px 6px 0px rgba(0, 0, 0, 0.16);
-    transition-delay: 250ms;
     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -1144,6 +1141,7 @@ gap: 30px;
 
 .footer-button:hover {
     background-color: #004680;
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-comit {
