--- a/css/style.css
+++ b/css/style.css
@@ -116,12 +116,18 @@ html {
     pointer-events: none;
 }
 
+.is-hidden .modal {
+    transform: scale(0);
+}
+
 .modal {
     width: 528px;
     height: 581px;
     position: relative;
     border-radius: 4px;
     padding: 40px;
+    transform: scale(1);
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background: var(--ttext-color-);
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
 }
