--- a/sass/section/_header.scss
+++ b/sass/section/_header.scss
@@ -1,3 +1,5 @@
+@import '../variables';
+
 .header {
     padding-top: 24px;
     padding-bottom: 25px;
@@ -22,7 +24,6 @@
         margin-right: 93px;
         font-family: 'Raleway';
         text-decoration: none;
-        color: black;
 
         &:before {
             content: 'Web';
