--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
+@import 'base/var';
 @import 'section/reset';
-@import 'variables';
 @import 'section/container';
 @import 'section/global';
 @import 'section/header';
