--- a/sass/section/_footer.scss
+++ b/sass/section/_footer.scss
@@ -2,7 +2,7 @@
 
 .foot {
     background: $footer-bg-color;
-    padding-top: 60px; 
+    padding-top: 60px;
     padding-bottom: 60px;
     position: relative;
 
@@ -10,6 +10,47 @@
         display: flex;
         align-items: baseline;
         gap: 70px;
+    }
+
+    &-logo {
+        font-family: 'Raleway';
+        font-size: 26px;
+        font-weight: 700;
+        line-height: 30.52px;
+        letter-spacing: 0.03em;
+        text-align: left;
+        text-decoration-skip-ink: none;
+        color: $ttext-color;
+        display: inline-block;
+
+        &:before {
+            content: 'Web';
+            color: #007BFF;
+        }
+    }
+
+    &-ul-li-a {
+        color: $ttext-color;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0.42px;
+        margin-bottom: 9px;
+        display: inline-block;
+        margin-top: 20px;
+    }
+
+    &-ul-li-aa,
+    &-ul-li-aaa {
+        display: inline-block;
+        color: rgba(255, 255, 255, 0.60);
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0.42px;
+        margin-bottom: 9px;
     }
 }
 
@@ -48,44 +89,4 @@
     width: 20px;
     height: 20px;
     fill: $ttext-color;
-}
-
-.foot-logo {
-    font-family: 'Raleway';
-    font-size: 26px;
-    font-weight: 700;
-    line-height: 30.52px;
-    letter-spacing: 0.03em;
-    text-align: left;
-    text-decoration-skip-ink: none;
-    color: $ttext-color;
-    display: inline-block;
-
-    &:before {  
-        content: 'Web';
-        color: #007BFF;
-    }
-}
-
-.foot-ul-li-a {
-    color: $ttext-color;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0.42px;
-    margin-bottom: 9px;
-    display: inline-block;
-    margin-top: 20px;
-}
-
-.foot-ul-li-aa, .foot-ul-li-aaa {
-    display: inline-block;
-    color: rgba(255, 255, 255, 0.60);
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0.42px;
-    margin-bottom: 9px;
 }
