--- a/sass/section/_alarm.scss
+++ b/sass/section/_alarm.scss
@@ -1,10 +1,6 @@
-@import '../variables';
-
-// Пример стилей для alarm (замени на свои)
 .alarm {
     padding-top: 94px;
     padding-bottom: 94px;
-    background: $alarm-bg-color;
 
     &__title {
         font-size: 32px;
@@ -15,59 +11,57 @@
         font-size: 18px;
         color: $text-color;
     }
-}
 
-.alarm-text {
-    color: $textp-color;
-    font-size: 14px;
-    font-weight: 400;
-    height: 1.71;
-    letter-spacing: 0.42px;
-}
+    &-text {
+        color: $textp-color;
+        font-size: 14px;
+        font-weight: 400;
+        height: 1.71;
+        letter-spacing: 0.42px;
+    }
 
-.alarm-subtle {
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 1.14;
-    letter-spacing: 0.42px;
-    margin-bottom: 10px;
-}
+    &-subtle {
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 1.14;
+        letter-spacing: 0.42px;
+        margin-bottom: 10px;
+    }
 
-.alarm-list {
-    display: flex;
-    gap: 25px;
-}
+    &-list {
+        display: flex;
+        gap: 25px;
+    }
 
-.alarm-item::before {
-    content: "";
-    width: 270px;
-    height: 120px;
-    border-radius: 4px;
-    background-color: $partybeb-color;
-    display: block;
-    margin-bottom: 30px;
-}
-
-.alarm-item:nth-child(1)::before {
-    background-image: url(../images.krakva/spytnic.webp);
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.alarm-item:nth-child(2)::before {
-    background-image: url(../images.krakva/chas.webp);
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.alarm-item:nth-child(3)::before {
-    background-image: url(../images.krakva/pc.webp);
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.alarm-item:nth-child(4)::before {
-    background-image: url(../images.krakva/cosmo.webp);
-    background-position: center;
-    background-repeat: no-repeat;
+    &-item {
+        &::before {
+            content: "";
+            width: 270px;
+            height: 120px;
+            border-radius: 4px;
+            background-color: $partybeb-color;
+            display: block;
+            margin-bottom: 30px;
+        }
+        &:nth-child(1)::before {
+            background-image: url(../images.krakva/spytnic.webp);
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+        &:nth-child(2)::before {
+            background-image: url(../images.krakva/chas.webp);
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+        &:nth-child(3)::before {
+            background-image: url(../images.krakva/pc.webp);
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+        &:nth-child(4)::before {
+            background-image: url(../images.krakva/cosmo.webp);
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+    }
 }
