--- a/sass/section/_alarm.scss
+++ b/sass/section/_alarm.scss
@@ -12,7 +12,7 @@
         color: $text-color;
     }
 
-    &-text {
+    &__text {
         color: $textp-color;
         font-size: 14px;
         font-weight: 400;
@@ -20,7 +20,7 @@
         letter-spacing: 0.42px;
     }
 
-    &-subtle {
+    &__subtle {
         font-size: 14px;
         font-weight: 700;
         line-height: 1.14;
@@ -28,12 +28,12 @@
         margin-bottom: 10px;
     }
 
-    &-list {
+    &__list {
         display: flex;
         gap: 25px;
     }
 
-    &-item {
+    &__item {
         &::before {
             content: "";
             width: 270px;
