--- a/sass/section/_hero.scss
+++ b/sass/section/_hero.scss
@@ -16,44 +16,44 @@
         color: $text-color;
         margin-top: 20px;
     }
+}
 
-    &-buisness {
-        padding-top: 200px;
-        padding-bottom: 200px;
-        display: flex;
-        gap: 50px;
+.buisness {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    display: flex;
+    gap: 50px;
+    text-align: center;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.40), rgba(47, 48, 58, 0.40)), url(../images.krakva/buisness.webp);
+
+    &__title {
+        color: $ttext-color;
         text-align: center;
-        background-image: linear-gradient(rgba(47, 48, 58, 0.40), rgba(47, 48, 58, 0.40)), url(../images.krakva/buisness.webp);
+        font-size: 44px;
+        font-weight: 900;
+        line-height: 1.36;
+        letter-spacing: 0.2px;
+        text-transform: uppercase;
+        width: 696px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 
-        &-title {
-            color: $ttext-color;
-            text-align: center;
-            font-size: 44px;
-            font-weight: 900;
-            line-height: 1.36;
-            letter-spacing: 0.2px;
-            text-transform: uppercase;
-            width: 696px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        &-button {
-            border-radius: 5px;
-            color: $bebrount-color;
-            background-color: $accent-color;
-            text-align: center;
-            font-size: 16px;
-            font-weight: 700;
-            line-height: 1.87;
-            letter-spacing: 0.96px;
-            padding: 10px 32px;
-            border: none;
-            margin-top: 30px;
-            &:hover {
-                background-color: #0f416a;
-                transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-            }
+    &__button {
+        border-radius: 5px;
+        color: $bebrount-color;
+        background-color: $accent-color;
+        text-align: center;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 1.87;
+        letter-spacing: 0.96px;
+        padding: 10px 32px;
+        border: none;
+        margin-top: 30px;
+        &:hover {
+            background-color: #0f416a;
+            transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
     }
 }
