--- a/sass/section/_team.scss
+++ b/sass/section/_team.scss
@@ -7,20 +7,20 @@
     padding-top: 94px;
     padding-bottom: 94px;
 
-    &-div {
+    &__div {
         padding-top: 30px;
         padding-bottom: 30px;
         background-color: $ttext-color;
         border-radius: 0px 0px 4px 4px;
     }
 
-    &-pic {
+    &__pic {
         gap: 30px;
         width: 270px;
         height: 260px;
     }
 
-    &-h2 {
+    &__h2 {
         color: $text-color;
         font-size: 36px;
         font-weight: 700;
@@ -30,13 +30,13 @@
         margin-bottom: 50px;
     }
 
-    &-ul {
+    &__ul {
         display: flex;
         text-align: center;
         gap: 30px;
     }
 
-    &-ul-p {
+    &__ul-p {
         color: $text-color;
         font-size: 16px;
         font-weight: 400;
@@ -45,7 +45,7 @@
         margin-top: 10px;
     }
 
-    &-h3 {
+    &__h3 {
         color: $text-color;
         font-size: 16px;
         font-weight: 500;
@@ -53,25 +53,25 @@
         letter-spacing: 0.48px;
     }
 
-    &-item {
+    &__item {
         border-radius: 0px 0px 4px 4px;
         box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
     }
 
-    &-icon {
+    &__icon {
         width: 20px;
         height: 20px;
         fill: $afro-color;
     }
 
-    &-items {
+    &__items {
         gap: 10px;
         display: flex;
         margin-top: 16px;
         justify-content: center;
     }
 
-    &-link {
+    &__link {
         width: 44px;
         height: 44px;
         border-radius: 50%;
@@ -82,7 +82,7 @@
             background-color: $accent-color;
             transition-delay: 250ms;
             transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-            .team-icon {
+            .team__icon {
                 fill: $ttext-color;
             }
         }
