--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,14 +1,14 @@
-@import 'base/var';
-@import 'section/reset';
-@import 'section/container';
-@import 'section/global';
-@import 'section/header';
-@import 'section/menu';
-@import 'section/modal';
-@import 'section/hero';
-@import 'section/alarm';
-@import 'section/team';
-@import 'section/portfolio';
-@import 'section/client';
-@import 'section/footer';
-@import 'section/subscribe';
+@import './base/var';
+@import './section/reset';
+@import './section/container';
+@import './section/global';
+@import './section/header';
+@import './section/hero';
+@import './section/alarm';
+@import './section/work';
+@import './section/team';
+@import './section/client';
+@import './section/footer';
+@import './section/portfolio';
+@import './section/subscribe';
+@import './section/modal';
