--- a/sass/section/_alarm.scss
+++ b/sass/section/_alarm.scss
@@ -2,21 +2,11 @@
     padding-top: 94px;
     padding-bottom: 94px;
 
-    &__title {
-        font-size: 32px;
-        color: $accent-color;
-    }
-
-    &__desc {
-        font-size: 18px;
-        color: $text-color;
-    }
-
     &__text {
         color: $textp-color;
         font-size: 14px;
         font-weight: 400;
-        height: 1.71;
+        line-height: 1.71;
         letter-spacing: 0.42px;
     }
 
@@ -26,11 +16,12 @@
         line-height: 1.14;
         letter-spacing: 0.42px;
         margin-bottom: 10px;
+        color: $text-color;
     }
 
     &__list {
         display: flex;
-        gap: 25px;
+        gap: 30px;
     }
 
     &__item {
@@ -42,26 +33,20 @@
             background-color: $partybeb-color;
             display: block;
             margin-bottom: 30px;
+            background-position: center;
+            background-repeat: no-repeat;
         }
         &:nth-child(1)::before {
             background-image: url(../images.krakva/spytnic.webp);
-            background-position: center;
-            background-repeat: no-repeat;
         }
         &:nth-child(2)::before {
             background-image: url(../images.krakva/chas.webp);
-            background-position: center;
-            background-repeat: no-repeat;
         }
         &:nth-child(3)::before {
             background-image: url(../images.krakva/pc.webp);
-            background-position: center;
-            background-repeat: no-repeat;
         }
         &:nth-child(4)::before {
             background-image: url(../images.krakva/cosmo.webp);
-            background-position: center;
-            background-repeat: no-repeat;
         }
     }
 }
