--- a/sass/section/_footer.scss
+++ b/sass/section/_footer.scss
@@ -1,5 +1,5 @@
-.foot {
-    background: $footer-bg-color;
+.footer {
+    background: $buisness-color;
     padding-top: 60px;
     padding-bottom: 60px;
     position: relative;
@@ -27,7 +27,7 @@
         }
     }
 
-    &__ul-li-a {
+    &__ul__li__a {
         color: $ttext-color;
         font-size: 14px;
         font-style: normal;
@@ -39,8 +39,8 @@
         margin-top: 20px;
     }
 
-    &__ul-li-aa,
-    &__ul-li-aaa {
+    &__ul__li__aa,
+    &__ul__li__aaa {
         display: inline-block;
         color: rgba(255, 255, 255, 0.60);
         font-size: 14px;
@@ -50,9 +50,9 @@
         letter-spacing: 0.42px;
         margin-bottom: 9px;
     }
-}
 
-.footer__tiitle {
+    
+    &__tiitle {
     color: #FFF;
     font-size: 14px;
     font-weight: 700;
@@ -62,12 +62,12 @@
     margin-bottom: 20px;
 }
 
-.footer__items {
+    &__items {
     display: flex;
     gap: 10px;
 }
 
-.footer__link {
+    &__link {
     width: 44px;
     height: 44px;
     border-radius: 50%;
@@ -83,8 +83,74 @@
     }
 }
 
-.footer__icon {
+    &__icon {
     width: 20px;
     height: 20px;
     fill: $ttext-color;
+}
+
+    &__subscribe {
+    margin-left: auto;
+}
+
+    &__form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+    &__tiiitle {
+    color: $ttext-color;
+    font-family: "Roboto";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 0.42px;
+    text-transform: uppercase;
+}
+  
+    &__input {
+    margin-top: 20px;
+    width: 358px;
+    height: 50px;
+    border-radius: 4px;
+    border: 1px solid rgba(255, 255, 255, 0.30);
+    background: rgba(33, 150, 243, 0.00);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    padding: 15px 16px;
+}
+  
+    &__button {
+    width: 200px;
+    color: $ttext-color;
+    text-align: center;
+    font-family: "Roboto";
+    font-size: 16px;
+    font-weight: 700;
+    border: none;
+    line-height: 1.87;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    letter-spacing: 0.96px;
+    height: 50px;
+    border-radius: 4px;
+    background: $accent-color;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    margin-top: 20px;
+    margin-left: 12px;
+}
+
+    &__button:hover {
+    background-color: #004680;
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+    &__comit {
+    margin-left: 10px;
+    width: 24px;
+    height: 24px;
+    fill: $ttext-color;
+}
 }
