--- a/sass/section/_header.scss
+++ b/sass/section/_header.scss
@@ -2,11 +2,6 @@
     padding-top: 24px;
     padding-bottom: 25px;
 
-    &__list {
-        display: flex;
-        gap: 52px;
-    }
-
     &__container {
         display: flex;
         align-items: center;
@@ -30,6 +25,11 @@
         }
     }
 
+    &__list {
+        display: flex;
+        gap: 52px;
+    }
+
     &__item {
         position: relative;
     }
@@ -50,34 +50,12 @@
         transition-duration: 2500ms;
         transition-timing-function: cubic-bezier(1,-0.01,0,1);
 
-        &::after {
-            content: "";
-            display: block;
-            width: 100%;
-            height: 5px;
-            background-color: $accent-color;
-            position: absolute;
-            left: 0;
-            bottom: -34px;
-            border-radius: 10px;
-            opacity: 0;
-            transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        }
-
-        &:hover::after {
-            opacity: 1;
-            transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        }
-
         &:hover {
             color: $accent-color;
             transition-delay: 250ms;
             transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
             .header__svg {
-                fill: $accent-color;
-            }
-            .header-svg {
                 fill: $accent-color;
             }
         }
@@ -88,14 +66,14 @@
         transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
-    &-items {
+    &__items {
         display: flex;
         align-items: center;
         gap: 50px;
         margin-left: auto;
     }
 
-    &-avatar {
+    &__avatar {
         color: $text-color;
         font-size: 14px;
         font-weight: 500;
@@ -126,17 +104,15 @@
         }
     }
 
-    &-svg {
-        &.header-svg:nth-child(1) {
+    &__svg {
+        &.header__svg:nth-child(1) {
             width: 16px;
             height: 12px;
-            fill: $textp-color;
             margin-right: 10px;
         }
-        &.header-svg:nth-child(2) {
+        &.header__svg:nth-child(2) {
             width: 10px;
             height: 16px;
-            fill: $textp-color;
             margin-right: 10px;
         }
     }
