--- a/sass/section/_team.scss
+++ b/sass/section/_team.scss
@@ -34,8 +34,8 @@
         gap: 30px;
     }
 
-    &__ul-p {
-        color: $text-color;
+    &__ul__p {
+        color: $textp-color;
         font-size: 16px;
         font-weight: 400;
         line-height: 1.18;
@@ -52,6 +52,7 @@
     }
 
     &__item {
+        flex-basis: calc( (100% - 90px) / 4 );
         border-radius: 0px 0px 4px 4px;
         box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
     }
