--- a/sass/base/_comman.scss
+++ b/sass/base/_comman.scss
@@ -1,12 +1,7 @@
-* 
-{
+*,::before,::after {
     box-sizing: border-box;
 }
 
 body {
     font-family: "Roboto" ;   
-}
-
-img {
-    width: 100%;
 }
