--- a/sass/section/_alarm.scss
+++ b/sass/section/_alarm.scss
@@ -1,52 +1,201 @@
+// .alarm {
+//     padding-top: 60px;
+//     padding-bottom: 60px;
+//      width: 1200px;
+
+//     @media screen and (min-width: 1200px) {
+//     padding-top: 94px;
+//     padding-bottom: 94px;
+//     }
+
+//     &__text {
+//         color: $textp-color;
+//         font-size: 14px;
+//         font-weight: 400;
+//         line-height: 1.71;
+//         letter-spacing: 0.42px;
+//         width: 100%;
+
+//         @media screen and (min-width: 480px) {
+//         width: 450px;
+//         }
+
+//         @media screen and (min-width: 768px) {
+//         width: 354px;
+
+//         }
+
+//         @media screen and (min-width: 1200px) {
+//         width: 270px;
+//         }
+//     }
+
+//     &__subtle {
+//         font-size: 14px;
+//         font-weight: 700;
+//         line-height: 1.14;
+//         letter-spacing: 0.42px;
+//         margin-bottom: 10px;
+//         color: $text-color;
+//         text-align: center; 
+
+//         @media screen and (min-width: 768px) {
+//         text-align: start;
+//         }
+//     }
+
+//     &__list {
+//         display: flex;
+//         gap: 30px;
+//         flex-wrap: wrap;
+//         justify-content: center;
+        
+        
+//     }
+
+//     &__item {
+//         background-color: blue;
+       
+        
+//         &::before {
+//             content: "";
+//             width: 270px;
+//             height: 120px;
+//             border-radius: 4px;
+//             background-color: $partybeb-color;
+//             display: block;
+//             margin-bottom: 30px;
+//             background-position: center;
+//             background-repeat: no-repeat;
+//             background-color: rgb(0, 255, 55);
+//             background-image: url(../images.krakva/spytnic.webp);
+          
+
+//         // @media screen and (min-width: 480px) {
+//         // width: 450px;
+//         // }
+
+//         // @media screen and (min-width: 768px) {
+//         // width: 354px;
+
+//         // }
+
+//         // @media screen and (min-width: 1200px) {
+//         // width: 270px;
+//         // }
+//         }
+        
+       
+//         &:nth-child(2)::before {
+//             background-image: url(../images.krakva/chas.webp);
+//         }
+//         &:nth-child(3)::before {
+//             background-image: url(../images.krakva/pc.webp);
+//         }
+//         &:nth-child(4)::before {
+//             background-image: url(../images.krakva/cosmo.webp);
+//         }
+//     }
+// }
 .alarm {
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+   @media screen and (min-width: 1200px) {
     padding-top: 94px;
-    padding-bottom: 94px;
+    padding-bottom: 0;
+  }
 
-    &__text {
-        color: $textp-color;
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 1.71;
-        letter-spacing: 0.42px;
+  &__list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+
+   @media screen and (min-width: 768px) {
+    flex-direction: row;
+  }
+  
+  }
+
+  &__item {
+    
+
+    &::before {
+      content: "";
+      margin-bottom: 30px;
+      display: block;
+      width: 100%;
+      height: 120px;
+      border-radius: 4px;
+      background-color: gray;
+      background-position: center;
+      background-repeat: no-repeat;
+
+       @media screen and (min-width: 480px) {
+    width: 450px;
+  }
+
+   @media screen and (min-width: 768px) {
+    width: 354px;
+  }
+   @media screen and (min-width: 1200px) {
+    width: 270px;
+  }
     }
 
-    &__subtle {
-        font-size: 14px;
-        font-weight: 700;
-        line-height: 1.14;
-        letter-spacing: 0.42px;
-        margin-bottom: 10px;
-        color: $text-color;
+    &:first-child::before {
+      background-image: url(/images.krakva/spytnic.webp);
     }
 
-    &__list {
-        display: flex;
-        gap: 30px;
+    &:nth-child(2)::before {
+      background-image: url(../images.krakva/chas.webp);
     }
 
-    &__item {
-        &::before {
-            content: "";
-            width: 270px;
-            height: 120px;
-            border-radius: 4px;
-            background-color: $partybeb-color;
-            display: block;
-            margin-bottom: 30px;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
-        &:nth-child(1)::before {
-            background-image: url(../images.krakva/spytnic.webp);
-        }
-        &:nth-child(2)::before {
-            background-image: url(../images.krakva/chas.webp);
-        }
-        &:nth-child(3)::before {
-            background-image: url(../images.krakva/pc.webp);
-        }
-        &:nth-child(4)::before {
-            background-image: url(../images.krakva/cosmo.webp);
-        }
+    &:nth-child(3)::before {
+      background-image: url(../images.krakva/pc.webp);
     }
+
+    &:last-child::before {
+      background-image: url(../images.krakva/cosmo.webp);
+    }
+  }
+
+  &__subtle {
+    color: #212121;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 1.14;
+    letter-spacing: 0.42px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    text-align: center;
+
+   @media screen and (min-width: 768px) {
+    text-align: start;
+  }
+   @media screen and (min-width: 1200px) {
+    
+  }
+  }
+
+  &__text {
+    color: #757575;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.71;
+    letter-spacing: 0.42px;
+    // width: 450px;
+
+  @media screen and (min-width: 480px) {
+     width: 450px;
+  }
+   @media screen and (min-width: 768px) {
+    width: 354px;
+  }
+   @media screen and (min-width: 1200px) {
+    width: 270px;
+  }
+  }
 }
