--- a/sass/section/_footer.scss
+++ b/sass/section/_footer.scss
@@ -136,7 +136,7 @@
     letter-spacing: 0.96px;
     height: 50px;
     border-radius: 4px;
-    background: $accent-color;
+    background-color: $accent-color;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     margin-top: 20px;
     margin-left: 12px;
