--- a/sass/section/_hero.scss
+++ b/sass/section/_hero.scss
@@ -1,22 +1,40 @@
 .buisness {
-    padding-top: 200px;
-    padding-bottom: 200px;
-    display: flex;
-    gap: 50px;
+    padding-top: 118px;
+    padding-bottom: 118px;
     text-align: center;
     background-image: linear-gradient(rgba(47, 48, 58, 0.40), rgba(47, 48, 58, 0.40)), url(../images.krakva/buisness.webp);
+    background-position: center;
+    background-size: cover; 
+    background-repeat: no-repeat; 
+    background-color: gray;
+   
+
+    @media screen and (min-width: 1200px) {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    }
 
     &__title {
         color: $ttext-color;
         text-align: center;
-        font-size: 44px;
+        font-size: 26px;
+        letter-spacing: 1.56px;
         font-weight: 900;
         line-height: 1.36;
-        letter-spacing: 0.2px;
         text-transform: uppercase;
-        width: 696px;
+        width: 100%;
         margin-left: auto;
         margin-right: auto;
+
+        @media screen and (min-width: 480px) {
+        width: 360px;
+        }
+
+        @media screen and (min-width: 1200px) {
+        font-size: 44px;
+        letter-spacing: 2.64px;
+        width: 696px;
+        }
     }
 
     &__button {
@@ -28,9 +46,14 @@
         font-weight: 700;
         line-height: 1.87;
         letter-spacing: 0.96px;
-        padding: 10px 32px;
+        padding: 10px 24px;
         border: none;
         margin-top: 30px;
+
+        @media screen and (min-width: 1200px) {
+        padding: 10px 32px;
+        }
+
         &:hover {
             background-color: #0f416a;
             transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
