--- a/sass/section/_portfolio.scss
+++ b/sass/section/_portfolio.scss
@@ -2,16 +2,16 @@
     padding-bottom: 94px;
     padding-top: 94px;
     border-top: solid 1px black;
-}
 
-.buttons-list {
+
+    &__list {
     display: flex;
     justify-content: center;
     gap: 8px;
     margin-bottom: 50px;
 }
 
-.buttons-button {
+    &__button {
     color: $logo-color;
     text-align: center;
     font-size: 16px;
@@ -29,7 +29,7 @@
     }
 }
 
-.buttons-item {
+    &__item {
     flex-basis: calc((100% - 60px) / 3);
     position: relative;
     overflow: hidden;
@@ -38,14 +38,14 @@
         background: $ttext-color;
         box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.12), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 1px 4px 6px 0px rgba(0, 0, 0, 0.16);
         transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        .buttons-div1 {
+        .buttons__div1 {
             transform: translateY(0%);
             opacity: 1;
         }
     }
 }
 
-.buttons-div1 {
+    &__div1 {
     transform: translateY(100%);
     opacity: 0;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -61,19 +61,19 @@
     transform: translateY(100%);
 }
 
-.buttons-photo {
+    &__photo {
     display: flex;
     width: 100%;
     height: auto; 
 }
 
-.buttons-gallery {
+    &__gallery {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
-}
-
-.buttons-h2 {
+}    
+    
+    &__h2 {
     color: $text-color;
     font-size: 18px;
     font-weight: 700;
@@ -88,7 +88,7 @@
     letter-spacing: 1.08px;
 }
 
-.buttons-p {
+    &__p {
     color: $textp-color;
     font-size: 16px;
     font-weight: 500;
@@ -98,20 +98,21 @@
     margin-top: 4px;
 }
 
-.buttons-div {
+    &__div {
     outline: 1px solid $border-color;
     padding: 20px 24px;
 }
 
-.buttons-div2 {
+    &__div2 {
     position: relative;
     overflow: hidden;
 }
 
-.buttons-p1 {
+    &__p1 {
     color: #FFF;
     font-size: 18px;
     font-weight: 400;
     line-height: 1.55;
     letter-spacing: 0.54px;
+}
 }
