--- a/style/main.css
+++ b/style/main.css
@@ -64,8 +64,20 @@ img {
 }
 
 .header {
-  padding-top: 24px;
-  padding-bottom: 25px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+@media screen and (min-width: 768px) {
+  .header {
+    padding-top: 21px;
+    padding-bottom: 21px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header {
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
 }
 .header__container {
   display: flex;
@@ -73,19 +85,39 @@ img {
 }
 .header__logo {
   color: #000000;
-  font-size: 26px;
+  font-size: 24px;
   font-weight: 700;
   line-height: 1.38;
-  letter-spacing: 0.78px;
+  letter-spacing: 0.72px;
   align-items: center;
-  margin-right: 93px;
+  margin-right: auto;
   font-family: "Raleway";
   text-decoration: none;
+}
+@media screen and (min-width: 768px) {
+  .header__logo {
+    margin-right: 88px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__logo {
+    font-size: 26px;
+    letter-spacing: 0.78px;
+    margin-right: 93px;
+  }
 }
 .header__logo:before {
   content: "Web";
   color: #007BFF;
   font-family: "Raleway";
+}
+.header__nav {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .header__nav {
+    display: block;
+  }
 }
 .header__list {
   display: flex;
@@ -122,10 +154,23 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header__items {
-  display: flex;
-  align-items: center;
-  gap: 50px;
+  display: none;
+  align-items: start;
   margin-left: auto;
+}
+@media screen and (min-width: 768px) {
+  .header__items {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__items {
+    flex-direction: row;
+    gap: 30px;
+    align-items: center;
+  }
 }
 .header__avatar {
   color: #212121;
@@ -166,24 +211,44 @@ img {
 }
 
 .buisness {
-  padding-top: 200px;
-  padding-bottom: 200px;
-  display: flex;
-  gap: 50px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   text-align: center;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images.krakva/buisness.webp);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: gray;
+}
+@media screen and (min-width: 1200px) {
+  .buisness {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 .buisness__title {
   color: #FFF;
   text-align: center;
-  font-size: 44px;
+  font-size: 26px;
+  letter-spacing: 1.56px;
   font-weight: 900;
   line-height: 1.36;
-  letter-spacing: 0.2px;
   text-transform: uppercase;
-  width: 696px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
+}
+@media screen and (min-width: 480px) {
+  .buisness__title {
+    width: 360px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .buisness__title {
+    font-size: 44px;
+    letter-spacing: 2.64px;
+    width: 696px;
+  }
 }
 .buisness__button {
   border-radius: 5px;
@@ -194,9 +259,14 @@ img {
   font-weight: 700;
   line-height: 1.87;
   letter-spacing: 0.96px;
-  padding: 10px 32px;
+  padding: 10px 24px;
   border: none;
   margin-top: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .buisness__button {
+    padding: 10px 32px;
+  }
 }
 .buisness__button:hover {
   background-color: #0f416a;
@@ -204,8 +274,79 @@ img {
 }
 
 .alarm {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .alarm {
+    padding-top: 94px;
+    padding-bottom: 0;
+  }
+}
+.alarm__list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+@media screen and (min-width: 768px) {
+  .alarm__list {
+    flex-direction: row;
+  }
+}
+.alarm__item::before {
+  content: "";
+  margin-bottom: 30px;
+  display: block;
+  width: 100%;
+  height: 120px;
+  border-radius: 4px;
+  background-color: gray;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+@media screen and (min-width: 480px) {
+  .alarm__item::before {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .alarm__item::before {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .alarm__item::before {
+    width: 270px;
+  }
+}
+.alarm__item:first-child::before {
+  background-image: url(/images.krakva/spytnic.webp);
+}
+.alarm__item:nth-child(2)::before {
+  background-image: url(../images.krakva/chas.webp);
+}
+.alarm__item:nth-child(3)::before {
+  background-image: url(../images.krakva/pc.webp);
+}
+.alarm__item:last-child::before {
+  background-image: url(../images.krakva/cosmo.webp);
+}
+.alarm__subtle {
+  color: #212121;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.14;
+  letter-spacing: 0.42px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .alarm__subtle {
+    text-align: start;
+  }
 }
 .alarm__text {
   color: #757575;
@@ -214,40 +355,20 @@ img {
   line-height: 1.71;
   letter-spacing: 0.42px;
 }
-.alarm__subtle {
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 1.14;
-  letter-spacing: 0.42px;
-  margin-bottom: 10px;
-  color: #212121;
+@media screen and (min-width: 480px) {
+  .alarm__text {
+    width: 450px;
+  }
 }
-.alarm__list {
-  display: flex;
-  gap: 30px;
+@media screen and (min-width: 768px) {
+  .alarm__text {
+    width: 354px;
+  }
 }
-.alarm__item::before {
-  content: "";
-  width: 270px;
-  height: 120px;
-  border-radius: 4px;
-  background-color: #F5F4FA;
-  display: block;
-  margin-bottom: 30px;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-.alarm__item:nth-child(1)::before {
-  background-image: url(../images.krakva/spytnic.webp);
-}
-.alarm__item:nth-child(2)::before {
-  background-image: url(../images.krakva/chas.webp);
-}
-.alarm__item:nth-child(3)::before {
-  background-image: url(../images.krakva/pc.webp);
-}
-.alarm__item:nth-child(4)::before {
-  background-image: url(../images.krakva/cosmo.webp);
+@media screen and (min-width: 1200px) {
+  .alarm__text {
+    width: 270px;
+  }
 }
 
 .work {
@@ -495,7 +616,7 @@ img {
   align-items: center;
 }
 .footer__tiiitle {
-  color: var(--ttext-color-);
+  color: #FFF;
   font-family: "Roboto";
   font-size: 14px;
   font-style: normal;
@@ -516,7 +637,7 @@ img {
 }
 .footer__button {
   width: 200px;
-  color: var(--ttext-color-);
+  color: #FFF;
   text-align: center;
   font-family: "Roboto";
   font-size: 16px;
@@ -529,7 +650,7 @@ img {
   letter-spacing: 0.96px;
   height: 50px;
   border-radius: 4px;
-  background: var(--accent-color-);
+  background-color: #2196F3;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   margin-top: 20px;
   margin-left: 12px;
@@ -542,7 +663,7 @@ img {
   margin-left: 10px;
   width: 24px;
   height: 24px;
-  fill: var(--ttext-color-);
+  fill: #FFF;
 }
 
 .buttons {
@@ -550,15 +671,13 @@ img {
   padding-top: 94px;
   border-top: solid 1px black;
 }
-
-.buttons-list {
+.buttons__list {
   display: flex;
   justify-content: center;
   gap: 8px;
   margin-bottom: 50px;
 }
-
-.buttons-button {
+.buttons__button {
   color: #000000;
   text-align: center;
   font-size: 16px;
@@ -569,30 +688,28 @@ img {
   border-radius: 5px;
   padding: 6px 22px 6px 22px;
 }
-.buttons-button:hover {
+.buttons__button:hover {
   background-color: #2196F3;
   color: #FFF;
   box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.1), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.buttons-item {
+.buttons__item {
   flex-basis: calc((100% - 60px) / 3);
   position: relative;
   overflow: hidden;
 }
-.buttons-item:hover {
+.buttons__item:hover {
   outline: 1px solid #EEE;
   background: #FFF;
   box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.12), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 1px 4px 6px 0px rgba(0, 0, 0, 0.16);
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.buttons-item:hover .buttons-div1 {
+.buttons__item:hover .buttons__div1 {
   transform: translateY(0%);
   opacity: 1;
 }
-
-.buttons-div1 {
+.buttons__div1 {
   transform: translateY(100%);
   opacity: 0;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -607,20 +724,17 @@ img {
   padding: 49px 24px 77px 24px;
   transform: translateY(100%);
 }
-
-.buttons-photo {
+.buttons__photo {
   display: flex;
   width: 100%;
   height: auto;
 }
-
-.buttons-gallery {
+.buttons__gallery {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
-
-.buttons-h2 {
+.buttons__h2 {
   color: #212121;
   font-size: 18px;
   font-weight: 700;
@@ -634,8 +748,7 @@ img {
   line-height: 36px;
   letter-spacing: 1.08px;
 }
-
-.buttons-p {
+.buttons__p {
   color: #757575;
   font-size: 16px;
   font-weight: 500;
@@ -644,18 +757,15 @@ img {
   background-color: #FFF;
   margin-top: 4px;
 }
-
-.buttons-div {
+.buttons__div {
   outline: 1px solid #EEE;
   padding: 20px 24px;
 }
-
-.buttons-div2 {
+.buttons__div2 {
   position: relative;
   overflow: hidden;
 }
-
-.buttons-p1 {
+.buttons__p1 {
   color: #FFF;
   font-size: 18px;
   font-weight: 400;
